Use proxy mode as a two-way data binding model, The append and pop of the list do not support automatic refresh.

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -930,9 +930,16 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "render\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "951604cd80f342018209aee0002d2c4b",
+       "model_id": "a904c6ea8f0041d29386c959a4c95d65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -946,7 +953,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67b3b8f4844a45dda46362ac35191c97",
+       "model_id": "f9ada410f24b40d29193f040a23b7511",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,7 +991,7 @@
     "        msg = {'role': role.value, 'content': ''}\n",
     "        self.vm.messages.append(msg)\n",
     "        # TODO 实现自动更新\n",
-    "        self.vm.render()\n",
+    "        # self.vm.render()\n",
     "    \n",
     "    def handle_edit_msg(self, i, owner):\n",
     "        if owner.icon == 'edit':\n",
@@ -996,7 +1003,7 @@
     "    def handle_del_msg(self, i, owner):\n",
     "        with self.vm.options.el:\n",
     "            msg = self.vm.messages.pop(i)\n",
-    "            self.vm.render()\n",
+    "            # self.vm.render()\n",
     "            print(f'del {i} {msg}')\n",
     "            \n",
     "    def handle_on_submit(self, owner):\n",
@@ -1035,6 +1042,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "for i in range(20):\n",
+    "    time.sleep(0.05)\n",
+    "    vue.messages[0]['content'] += 's'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "render\n",
+      "render\n"
+     ]
+    }
+   ],
+   "source": [
+    "vue.messages = [{'role': 'USER', 'content': 'replace bot'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vue.models = ['1', '2']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -1062,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1122,7 @@
       "get\n",
       "get attr a\n",
       "set\n",
-      "set attr b: 1\n",
+      "get attr b\n",
       "print\n",
       "get attr _ipython_canary_method_should_not_exist_\n",
       "get attr _ipython_canary_method_should_not_exist_\n",
@@ -1096,10 +1142,10 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 2, 'b': 1}"
+       "{'a': 2, 'b': {'c': 1}}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1166,7 @@
     "    def __setattr__(self, attr, value):\n",
     "        self.__setitem__(attr, value)\n",
     "\n",
-    "d = {'a': 1, 'b': 2}\n",
+    "d = {'a': 1, 'b': {'c': 2}}\n",
     "dd = Dict(d)\n",
     "print('get[]')\n",
     "dd['a']\n",
@@ -1129,7 +1175,7 @@
     "print('get')\n",
     "dd.a\n",
     "print('set')\n",
-    "dd.b = 1\n",
+    "dd.b['c'] = 1\n",
     "print('print')\n",
     "dd"
    ]
