--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -897,18 +897,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -917,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -933,13 +924,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "render\n"
+      "render========\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a904c6ea8f0041d29386c959a4c95d65",
+       "model_id": "5be109af8ff34929aae0f687e67b340a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -953,7 +944,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ada410f24b40d29193f040a23b7511",
+       "model_id": "4216c87beb25471eb005f41fff7fd562",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1042,7 +1033,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(pyvue.Dep,\n",
+       "            {'role': <pyvue.Dep at 0x119ea29b0>,\n",
+       "             'content': <pyvue.Dep at 0x119ea1450>})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vue.messages[2]._deps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,15 +1067,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "render\n",
-      "render\n"
+      "render========\n"
      ]
     }
    ],
@@ -1072,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
