add vueify ipywidgets

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -921,16 +921,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "render========\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5be109af8ff34929aae0f687e67b340a",
+       "model_id": "3418fbd5fca74a93a2e24796d32c6b11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -944,7 +937,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4216c87beb25471eb005f41fff7fd562",
+       "model_id": "f2d4a0e4b0594af5a184c36e6791f15b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1191,6 +1184,34 @@
     "print('print')\n",
     "dd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将一个ipywidgets转换为vue component，\n",
+    "\n",
+    "```python\n",
+    "ai> 将以下组件的参数转换为vue component的props定义：widgets.IntProgress(\n",
+    "    value=7,\n",
+    "    min=0,\n",
+    "    max=10,\n",
+    "    description='Loading:',\n",
+    "    bar_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    style={'bar_color': 'maroon'},\n",
+    "    orientation='horizontal'\n",
+    ")\n",
+    "\n",
+    "ai> 将https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html 中selection widgets的各个widgets的参数，转换为vue component的props定义\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
