fixed v-for for html tag

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -1202,7 +1202,7 @@
     "    orientation='horizontal'\n",
     ")\n",
     "\n",
-    "ai> 将https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html 中selection widgets的各个widgets的参数，转换为vue component的props定义\n",
+    "ai> 将https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html 中selection widgets的各个widgets的参数，转换为vue component的props定义，并标注出和这个widget最匹配的element-ui组件\n",
     "```"
    ]
   },
