--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -142,6 +142,7 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -528,6 +529,7 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -733,6 +735,7 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
+    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -897,9 +900,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -908,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -923,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3418fbd5fca74a93a2e24796d32c6b11",
+       "model_id": "cf500272eeb145cd919f38cb94372f65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -937,7 +949,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2d4a0e4b0594af5a184c36e6791f15b",
+       "model_id": "c90de2e2f93e4732993f1d3b23c29419",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1026,18 +1038,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(pyvue.Dep,\n",
-       "            {'role': <pyvue.Dep at 0x119ea29b0>,\n",
-       "             'content': <pyvue.Dep at 0x119ea1450>})"
+       "defaultdict(pyvue.Dep, {})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
