--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -895,23 +895,14 @@
     }
    },
    "source": [
-    "# 示例"
+    "# 开发用示例"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -920,12 +911,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
@@ -935,7 +922,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf500272eeb145cd919f38cb94372f65",
+       "model_id": "53f1726ed1c14595a89bfa1887fcd91e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -949,7 +936,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c90de2e2f93e4732993f1d3b23c29419",
+       "model_id": "2814530bee724b52b1e0bb8be23d2aaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -979,7 +966,11 @@
     "    def __init__(self, vm: 'Vue'):\n",
     "        self.vm = vm\n",
     "\n",
+    "    def is_bot(self, val):\n",
+    "        return val == Role.bot.value\n",
+    "\n",
     "    def handle_change_role(self, owner):\n",
+    "        print(owner)\n",
     "        owner.description = (~Role(owner.description)).value\n",
     "\n",
     "    def handle_add_msg(self, owner):\n",
@@ -989,20 +980,20 @@
     "        # TODO 实现自动更新\n",
     "        # self.vm.render()\n",
     "    \n",
-    "    def handle_edit_msg(self, i, owner):\n",
+    "    def handle_edit_msg(self, owner):\n",
     "        if owner.icon == 'edit':\n",
     "            state = 'eye'\n",
     "        else:\n",
     "            state = 'edit'\n",
     "        owner.icon = state\n",
     "\n",
-    "    def handle_del_msg(self, i, owner):\n",
+    "    def handle_del_msg(self, i):\n",
     "        with self.vm.options.el:\n",
     "            msg = self.vm.messages.pop(i)\n",
     "            # self.vm.render()\n",
     "            print(f'del {i} {msg}')\n",
     "            \n",
-    "    def handle_on_submit(self, owner):\n",
+    "    def handle_on_submit(self):\n",
     "        with self.vm.options.el:\n",
     "            clear_output()\n",
     "            display(self.vm.dom)\n",
@@ -1021,17 +1012,17 @@
     "    'on_edit': True,\n",
     "    # 'msgs': [ {'role': Role.user.value, 'content': 'hello bot'}, ],\n",
     "}\n",
-    "with open('ipywidgets_vue/app.vue') as f:\n",
-    "    vue_app = f.read()\n",
-    "    str_template = re.search('<template>(.*)</template>', vue_app, flags=re.S)[1]\n",
+    "# with open('ipywidgets_vue/app.vue') as f:\n",
+    "#     vue_app = f.read()\n",
+    "#     str_template = re.search('<template>(.*)</template>', vue_app, flags=re.S)[1]\n",
     "    \n",
     "vue = Vue({\n",
     "    'el': widgets.Output(),\n",
     "    'data': data,\n",
     "    'methods': Methods,\n",
-    "    'template': str_template,\n",
+    "    'template': get_template_from_vue('ipywidgets_vue/app.vue'),\n",
     "    # 'template': template,\n",
-    "})\n",
+    "}, debug=True)\n",
     "display(vue.options.el)\n",
     "display(vue.debug_log)"
    ]
@@ -1070,17 +1061,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "render========\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vue.messages = [{'role': 'USER', 'content': 'replace bot'}]"
    ]
@@ -1119,6 +1102,38 @@
     "b1 = widgets.Button(description='b1', button_style='danger',layout=widgets.Layout(width='100%'))\n",
     "b2 =  widgets.Button(description='b2', layout=widgets.Layout(width='100%'))\n",
     "widgets.AppLayout(right_sidebar=b1, center=b2, pane_widths=[0,3,1.5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🚀 LLaMA2 dev GUI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🚀 Openai Playground Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo"
    ]
   },
   {
