add attr_chain watcher for v-for, v-bind, html template

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -900,9 +900,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -911,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -922,7 +931,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53f1726ed1c14595a89bfa1887fcd91e",
+       "model_id": "3dd4cd025d6b480ea1d767e917e3ec8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -936,7 +945,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2814530bee724b52b1e0bb8be23d2aaa",
+       "model_id": "8e61ca6e7cf14a9d8f44bbefc7894659",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,9 +1009,24 @@
     "            pprint(self.vm._data)\n",
     "\n",
     "\n",
+    "attr_chain_list = [\n",
+    "  ('op1', {\n",
+    "    'name': 'l1',\n",
+    "    'in': [1, 2, 4],\n",
+    "  }),\n",
+    "  ('op2', {\n",
+    "    'name': 'l2',\n",
+    "    'in': [5, 6, 7],\n",
+    "  }),\n",
+    "]\n",
+    "\n",
     "data = {\n",
     "    'models': ['llama', 'llama2', 'llama2-chat'],\n",
     "    'model': 'llama',\n",
+    "   \n",
+    "    'attr_options': attr_chain_list,\n",
+    "    'option': attr_chain_list[0][1],\n",
+    " \n",
     "    'top_p': 1,\n",
     "    'messages': [\n",
     "        {'role': Role.user.value, 'content': 'hello bot'},\n",
