feature: 支持vue3的组合式api

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -895,7 +895,7 @@
     }
    },
    "source": [
-    "# 开发用示例"
+    "# 开发用示例 v3"
    ]
   },
   {
@@ -921,7 +921,68 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc1ddcb1872a43b0a0550c5f3eda016a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82991cacc6b34375af521ad89effd5d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from pyvue import *\n",
+    "from app import setup\n",
+    "\n",
+    "\n",
+    "vue = Vue({\n",
+    "    'el': widgets.Output(),\n",
+    "    # 'data': data,\n",
+    "    # 'methods': Methods,\n",
+    "    'setup': setup,\n",
+    "    'template': get_template_from_vue('ipywidgets_vue/app.vue'),\n",
+    "    # 'template': template,\n",
+    "}, debug=True)\n",
+    "display(vue.options.el)\n",
+    "display(vue.debug_log)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 开发用示例 v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
