example: add llamacpp dev app

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -970,6 +970,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "app-llama-dev.vue  app-openai-playground.vue  app_llama_dev.py\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1198,12 +1214,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01cac63d0ffe4636b370dab3fff6b2ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8157d494b22e48c9a9bcd66b2f590d5b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# todo \n",
+    "from pyvue import *\n",
+    "from examples import app_llamacpp_dev\n",
+    "vue = Vue({\n",
+    "    'el': widgets.Output(),\n",
+    "    'setup': app_llamacpp_dev.setup,\n",
+    "    'template': get_template_from_vue('examples/app-llamacpp-dev.vue'),\n",
+    "}, debug=False)\n",
+    "display(vue.options.el)\n",
+    "display(vue.debug_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# todo "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
