modified: app-llamacpp-dev to accordion

--- a/ipy-vue.ipynb
+++ b/ipy-vue.ipynb
@@ -920,13 +920,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc1ddcb1872a43b0a0550c5f3eda016a",
+       "model_id": "ef40f624a9fb46e8be4bc8d6eeb56de6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -940,7 +940,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82991cacc6b34375af521ad89effd5d9",
+       "model_id": "059b87487edc49419b64eb3ef117836f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -954,7 +954,7 @@
    ],
    "source": [
     "from pyvue import *\n",
-    "from app import setup\n",
+    "from examples.app import setup\n",
     "\n",
     "\n",
     "vue = Vue({\n",
@@ -962,7 +962,7 @@
     "    # 'data': data,\n",
     "    # 'methods': Methods,\n",
     "    'setup': setup,\n",
-    "    'template': get_template_from_vue('ipywidgets_vue/app.vue'),\n",
+    "    'template': get_template_from_vue('examples/app.vue'),\n",
     "    # 'template': template,\n",
     "}, debug=True)\n",
     "display(vue.options.el)\n",
@@ -1214,13 +1214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01cac63d0ffe4636b370dab3fff6b2ef",
+       "model_id": "a8f31c68126140c89ae0fe82847e1f4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1234,7 +1234,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8157d494b22e48c9a9bcd66b2f590d5b",
+       "model_id": "240ff22a0ffb40db9fe23e9252c4b05e",
        "version_major": 2,
        "version_minor": 0
       },
