refactor: 调整目录结构

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -735,7 +735,6 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
-    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -751,9 +750,8 @@
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false
+     "source_hidden": true
     },
     "pycharm": {
      "name": "#%%\n"
@@ -886,6 +884,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 开发用示例 v2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -920,13 +927,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dc32782dcc64020aeb3e48e02779d4f",
+       "model_id": "e8e19acc1fc542c29f7ad39dd7bbb914",
        "version_major": 2,
        "version_minor": 0
       },
@@ -940,7 +953,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81dc72f4e3f14c099cd4bba2eb9355b0",
+       "model_id": "2ac4bfb09ade413fb060f58389d82c62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -953,7 +966,13 @@
     }
    ],
    "source": [
-    "from pyvue import *\n",
+    "import os\n",
+    "import sys\n",
+    "HERE = os.path.realpath('')\n",
+    "source_root = os.path.join(HERE, os.pardir)\n",
+    "sys.path.append(source_root)\n",
+    "\n",
+    "from vuepy.vue import *\n",
     "from examples.app import setup\n",
     "\n",
     "\n",
@@ -962,7 +981,7 @@
     "    # 'data': data,\n",
     "    # 'methods': Methods,\n",
     "    'setup': setup,\n",
-    "    'template': get_template_from_vue('examples/app.vue'),\n",
+    "    'template': get_template_from_vue(os.path.join(source_root, 'examples/app.vue')),\n",
     "    # 'template': template,\n",
     "}, debug=True)\n",
     "display(vue.options.el)\n",
@@ -984,13 +1003,6 @@
     }
    ],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 开发用示例 v2"
-   ]
   },
   {
    "cell_type": "code",
@@ -1214,13 +1226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39d912588e6648a1b60682df45eb2854",
+       "model_id": "67f4a280f1eb4e358afcdf4610669683",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1234,7 +1246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bab4b2ee0d42dcab2005f2ca14bb96",
+       "model_id": "0da0eb2e3f764980a0e09004b7a44f0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1247,13 +1259,18 @@
     }
    ],
    "source": [
-    "# todo \n",
-    "from pyvue import *\n",
+    "import os\n",
+    "import sys\n",
+    "HERE = os.path.realpath('')\n",
+    "source_root = os.path.join(HERE, os.pardir)\n",
+    "sys.path.append(source_root)\n",
+    "\n",
+    "from vuepy.vue import *\n",
     "from examples import app_llamacpp_dev\n",
     "vue = Vue({\n",
     "    'el': widgets.Output(),\n",
     "    'setup': app_llamacpp_dev.setup,\n",
-    "    'template': get_template_from_vue('examples/app-llamacpp-dev.vue'),\n",
+    "    'template': get_template_from_vue(os.path.join(source_root, 'examples/app-llamacpp-dev.vue')),\n",
     "}, debug=False)\n",
     "display(vue.options.el)\n",
     "display(vue.debug_log)"
