fixed: container tag 和 html tag添加v-if支持

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -939,7 +939,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8e19acc1fc542c29f7ad39dd7bbb914",
+       "model_id": "ca8b44af71aa4ffaa83df86835e77256",
        "version_major": 2,
        "version_minor": 0
       },
@@ -953,7 +953,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ac4bfb09ade413fb060f58389d82c62",
+       "model_id": "cf0a87fdf5974e9ab3427dd1848dd1de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -968,11 +968,14 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import ipywidgets as widgets\n",
+    "\n",
     "HERE = os.path.realpath('')\n",
     "source_root = os.path.join(HERE, os.pardir)\n",
     "sys.path.append(source_root)\n",
+    "sys.path.append(os.path.join(source_root, 'src'))\n",
     "\n",
-    "from vuepy.vue import *\n",
+    "from vuepy import *\n",
     "from examples.app import setup\n",
     "\n",
     "\n",
