refactor: 1 vue框架标准化；2 将组件库从vue框架中拆分为独立模块

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -748,16 +748,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'widgets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m html_hr \u001B[38;5;241m=\u001B[39m \u001B[43mwidgets\u001B[49m\u001B[38;5;241m.\u001B[39mHTML(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m<hr>\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      2\u001B[0m html_br \u001B[38;5;241m=\u001B[39m widgets\u001B[38;5;241m.\u001B[39mHTML(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m<br>\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mRole\u001B[39;00m(enum\u001B[38;5;241m.\u001B[39mEnum):\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'widgets' is not defined"
+     ]
+    }
+   ],
    "source": [
     "html_hr = widgets.HTML('<hr>')\n",
     "html_br = widgets.HTML('<br>')\n",
@@ -939,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca8b44af71aa4ffaa83df86835e77256",
+       "model_id": "fe4ea041839344b1bd48bf040fbe949e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -953,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf0a87fdf5974e9ab3427dd1848dd1de",
+       "model_id": "20b06c3fb0944bfaa26ab16d3e3f91ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,45 +984,33 @@
     "sys.path.append(source_root)\n",
     "sys.path.append(os.path.join(source_root, 'src'))\n",
     "\n",
-    "from vuepy import *\n",
+    "from vuepy import create_app\n",
+    "from ipywui import IPywidgets\n",
     "from examples.app import setup\n",
     "\n",
     "\n",
-    "vue = Vue({\n",
-    "    'el': widgets.Output(),\n",
-    "    # 'data': data,\n",
-    "    # 'methods': Methods,\n",
+    "app = create_app({\n",
     "    'setup': setup,\n",
-    "    'template': get_template_from_vue(os.path.join(source_root, 'examples/app.vue')),\n",
-    "    # 'template': template,\n",
+    "    'template': os.path.join(source_root, 'examples/app.vue'),\n",
     "}, debug=True)\n",
-    "display(vue.options.el)\n",
-    "display(vue.debug_log)"
+    "app.use(IPywidgets)\n",
+    "app.mount(widgets.Output())\n",
+    "display(app.debug_log)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "app-llama-dev.vue  app-openai-playground.vue  app_llama_dev.py\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# str(app.dom)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "pycharm": {
      "is_executing": true,
      "name": "#%%\n"
@@ -1195,13 +1192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8e0791a51364b598fcd64c577889d43",
+       "model_id": "002062aa813a40a8bfa3092c62376bac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1209,7 +1206,7 @@
        "AppLayout(children=(Button(button_style='danger', description='b1', layout=Layout(grid_area='right-sidebar', w…"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1214,17 @@
    "source": [
     "b1 = widgets.Button(description='b1', button_style='danger',layout=widgets.Layout(width='100%'))\n",
     "b2 =  widgets.Button(description='b2', layout=widgets.Layout(width='100%'))\n",
-    "widgets.AppLayout(right_sidebar=b1, center=b2, pane_widths=[0,3,1.5])"
+    "app = widgets.AppLayout(right_sidebar=b1, center=b2, pane_widths=[0,3,1.5])\n",
+    "app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.children = [b1]"
    ]
   },
   {
@@ -1229,13 +1236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67f4a280f1eb4e358afcdf4610669683",
+       "model_id": "37edd20bc755438abdffd468039f6dd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1249,7 +1256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0da0eb2e3f764980a0e09004b7a44f0d",
+       "model_id": "4a4bf71ee71b408e906fd81b8e66c38a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1348,7 @@
        "{'a': 2, 'b': {'c': 1}}"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
