refactor: rename exampeles

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -948,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe4ea041839344b1bd48bf040fbe949e",
+       "model_id": "86290303de8c43cd9acd47be85716f6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20b06c3fb0944bfaa26ab16d3e3f91ce",
+       "model_id": "86ae68e8929540f59514f33eee8a92ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,23 +975,22 @@
     }
    ],
    "source": [
-    "import os\n",
+    "import pathlib\n",
     "import sys\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "HERE = os.path.realpath('')\n",
-    "source_root = os.path.join(HERE, os.pardir)\n",
-    "sys.path.append(source_root)\n",
-    "sys.path.append(os.path.join(source_root, 'src'))\n",
-    "\n",
     "from vuepy import create_app\n",
     "from ipywui import IPywidgets\n",
-    "from examples.app import setup\n",
+    "\n",
+    "HERE = pathlib.Path().absolute()\n",
+    "source_root = HERE.parent\n",
+    "sys.path.append(str(source_root))\n",
+    "from examples.app_vue.app import setup\n",
     "\n",
     "\n",
     "app = create_app({\n",
     "    'setup': setup,\n",
-    "    'template': os.path.join(source_root, 'examples/app.vue'),\n",
+    "    'template': source_root / 'examples' / 'app_vue'/ 'app-vue.vue',\n",
     "}, debug=True)\n",
     "app.use(IPywidgets)\n",
     "app.mount(widgets.Output())\n",
@@ -1000,11 +999,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_dom_classes',\n",
+       " '_model_module',\n",
+       " '_model_module_version',\n",
+       " '_model_name',\n",
+       " '_view_count',\n",
+       " '_view_module',\n",
+       " '_view_module_version',\n",
+       " '_view_name',\n",
+       " 'box_style',\n",
+       " 'children',\n",
+       " 'layout',\n",
+       " 'selected_index',\n",
+       " 'tabbable',\n",
+       " 'titles',\n",
+       " 'tooltip']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# str(app.dom)"
+    "tab.keys"
    ]
   },
   {
@@ -1242,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37edd20bc755438abdffd468039f6dd9",
+       "model_id": "33661e3933324f43b1f1ef3cba7c7c9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1256,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a4bf71ee71b408e906fd81b8e66c38a",
+       "model_id": "6f1bb85009f245deaa879dd98a3c4ed1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1269,21 +1293,26 @@
     }
    ],
    "source": [
-    "import os\n",
+    "import pathlib\n",
     "import sys\n",
-    "HERE = os.path.realpath('')\n",
-    "source_root = os.path.join(HERE, os.pardir)\n",
-    "sys.path.append(source_root)\n",
+    "import ipywidgets as widgets\n",
     "\n",
-    "from vuepy.vue import *\n",
-    "from examples import app_llamacpp_dev\n",
-    "vue = Vue({\n",
-    "    'el': widgets.Output(),\n",
-    "    'setup': app_llamacpp_dev.setup,\n",
-    "    'template': get_template_from_vue(os.path.join(source_root, 'examples/app-llamacpp-dev.vue')),\n",
-    "}, debug=False)\n",
-    "display(vue.options.el)\n",
-    "display(vue.debug_log)"
+    "from vuepy import create_app\n",
+    "from ipywui import IPywidgets\n",
+    "\n",
+    "HERE = pathlib.Path().absolute()\n",
+    "source_root = HERE.parent\n",
+    "sys.path.append(str(source_root))\n",
+    "from examples.llamacpp_dev.app import setup\n",
+    "\n",
+    "\n",
+    "app = create_app({\n",
+    "    'setup': setup,\n",
+    "    'template': source_root / 'examples' / 'llamacpp_dev'/ 'llamacpp-dev.vue',\n",
+    "}, debug=True)\n",
+    "app.use(IPywidgets)\n",
+    "app.mount(widgets.Output())\n",
+    "display(app.debug_log)"
    ]
   },
   {
