feat: unify the data type of slider, progress, text, inputs.

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -948,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86290303de8c43cd9acd47be85716f6f",
+       "model_id": "15918f7cafb64234b8ac622c3937d8cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86ae68e8929540f59514f33eee8a92ad",
+       "model_id": "e4b57df96edc499e9975b3ad316fc46d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -999,36 +999,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57dbd7f0b7bd462fb7c65f9ef56bf7ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "['_dom_classes',\n",
-       " '_model_module',\n",
-       " '_model_module_version',\n",
-       " '_model_name',\n",
-       " '_view_count',\n",
-       " '_view_module',\n",
-       " '_view_module_version',\n",
-       " '_view_name',\n",
-       " 'box_style',\n",
-       " 'children',\n",
-       " 'layout',\n",
-       " 'selected_index',\n",
-       " 'tabbable',\n",
-       " 'titles',\n",
-       " 'tooltip']"
+       "SelectionRangeSlider(continuous_update=False, description='I like my eggs ...', index=(0, 0), options=('scramb…"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tab.keys"
+    "sel = widgets.SelectionRangeSlider(\n",
+    "    options=['scrambled', 'sunny side up', 'poached', 'over easy'],\n",
+    "    # value=('sunny side up', 'poached'),\n",
+    "    description='I like my eggs ...',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True\n",
+    ")\n",
+    "sel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sel.value"
    ]
   },
   {
@@ -1260,13 +1280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33661e3933324f43b1f1ef3cba7c7c9f",
+       "model_id": "bd9c6bcaa14745dfb148374c145213bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f1bb85009f245deaa879dd98a3c4ed1",
+       "model_id": "c8bd056ff1f34639a242a8b4c4ee5356",
        "version_major": 2,
        "version_minor": 0
       },
