feat: add import_sfc

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -948,21 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15918f7cafb64234b8ac622c3937d8cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4b57df96edc499e9975b3ad316fc46d",
+       "model_id": "c02d77408b6748faa3e07553dd8b8635",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,25 +962,17 @@
    ],
    "source": [
     "import pathlib\n",
-    "import sys\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from vuepy import create_app\n",
+    "from vuepy import create_app, import_sfc\n",
     "from ipywui import IPywidgets\n",
     "\n",
-    "HERE = pathlib.Path().absolute()\n",
-    "source_root = HERE.parent\n",
-    "sys.path.append(str(source_root))\n",
-    "from examples.app_vue.app import setup\n",
+    "source_root = pathlib.Path().absolute().parent\n",
+    "App = import_sfc(source_root / 'examples' / 'vue_app'/ 'VueApp.vue')\n",
     "\n",
-    "\n",
-    "app = create_app({\n",
-    "    'setup': setup,\n",
-    "    'template': source_root / 'examples' / 'app_vue'/ 'app-vue.vue',\n",
-    "}, debug=True)\n",
-    "app.use(IPywidgets)\n",
+    "app = create_app(App, debug=True).use(IPywidgets)\n",
     "app.mount(widgets.Output())\n",
-    "display(app.debug_log)"
+    "# display(app.debug_log)"
    ]
   },
   {
@@ -1286,21 +1264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd9c6bcaa14745dfb148374c145213bd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8bd056ff1f34639a242a8b4c4ee5356",
+       "model_id": "e3751f603aa0489f935a59e54e619fd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1314,25 +1278,16 @@
    ],
    "source": [
     "import pathlib\n",
-    "import sys\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from vuepy import create_app\n",
     "from ipywui import IPywidgets\n",
+    "from vuepy import create_app, import_sfc\n",
     "\n",
-    "HERE = pathlib.Path().absolute()\n",
-    "source_root = HERE.parent\n",
-    "sys.path.append(str(source_root))\n",
-    "from examples.llamacpp_dev.app import setup\n",
+    "source_root = pathlib.Path().absolute().parent\n",
+    "App = import_sfc(source_root / 'examples' / 'llamacpp_dev' / 'LlamacppDev.vue')\n",
     "\n",
-    "\n",
-    "app = create_app({\n",
-    "    'setup': setup,\n",
-    "    'template': source_root / 'examples' / 'llamacpp_dev'/ 'llamacpp-dev.vue',\n",
-    "}, debug=True)\n",
-    "app.use(IPywidgets)\n",
-    "app.mount(widgets.Output())\n",
-    "display(app.debug_log)"
+    "app = create_app(App, debug=True).use(IPywidgets)\n",
+    "app.mount(widgets.Output())"
    ]
   },
   {
