fix: fix ipywui component path for .

--- a/src/vuepy/cli/template_vue/app.ipynb
+++ b/src/vuepy/cli/template_vue/app.ipynb
@@ -8,27 +8,18 @@
    },
    "outputs": [],
    "source": [
-    "import os.path\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "from IPython.display import display\n",
+    "import pathlib\n",
     "import ipywidgets as widgets\n",
-    "from vuepy import Vue\n",
-    "from vuepy import get_template_from_vue\n",
     "\n",
-    "import app\n",
+    "from vuepy import create_app, import_sfc\n",
+    "from ipywui import IPywidgets\n",
     "\n",
+    "HERE = pathlib.Path().absolute().parent\n",
+    "App = import_sfc(HERE / 'App.vue')\n",
     "\n",
-    "HERE = os.path.realpath('')\n",
-    "\n",
-    "vue = Vue({\n",
-    "    'el': widgets.Output(),\n",
-    "    'setup': app.setup,\n",
-    "    'template': get_template_from_vue(os.path.join(HERE, 'app.vue')),\n",
-    "})\n",
-    "display(vue.options.el)\n",
-    "display(vue.debug_log)"
+    "app = create_app(App, debug=True).use(IPywidgets)\n",
+    "app.mount(widgets.Output())\n",
+    "# display(app.debug_log)"
    ]
   }
  ],
